--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="ru" ng-app>
+<html lang="en" ng-app="myApp">
 <head>
 	<meta charset="UTF-8">
 	<title>Angular-www</title>
-	<link rel="stylesheet" type="text/css" href="/css/vendor.min.css">
-	<link rel="stylesheet" type="text/css" href="/css/main.min.css">
+	<link rel="stylesheet" type="text/css" href="/bundle/css/vendor.min.css">
+	<link rel="stylesheet" type="text/css" href="/bundle/css/main.min.css">
 </head>
-<body>
-
-<script type="javascript/text" src="/js/vendor.min.js"></script>
-<script type="javascript/text" src="/js/main.min.js"></script>
+<body ng-controller="myController">
+	<section class="section">
+		<div class="wr">
+			<h1 class="title">Hello {{1+2}}</h1>
+		</div>
+	</section>
+	<script type="text/javascript" src="/bundle/js/vendor.min.js"></script>
+	<script type="text/javascript" src="/bundle/js/main.min.js"></script>
 </body>
 </html>
