--- a/app/partial-login.html
+++ b/app/partial-login.html
@@ -1,8 +1,9 @@
-<md-content layout-padding>
-	<form name="projectForm">
+<h1>Вход</h1>
+<md-content layout-padding ng-controller="LoginForm as forms">
+	<form name="loginForm" ng-submit="forms.submit()">
 		<md-input-container class="md-block">
 			<label>Ваш E-mail</label>
-			<input required type="email" name="clientEmail" ng-model="project.clientEmail"
+			<input required type="email" name="clientEmail" ng-model="user.email"
 				minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/" />
 			<div ng-messages="projectForm.clientEmail.$error" role="alert">
 				<div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">Email ошибочка.</div>
@@ -11,7 +12,7 @@
 
 		<md-input-container class="md-block">
 			<label>Пароль</label>
-			<input required type="password" name="clientPass" ng-model="project.clientPass" minlength="6" maxlength="20" />
+			<input required type="password" name="clientPass" ng-model="user.pass" minlength="6" maxlength="20" />
 			<div ng-messages="projectForm.clientPass.$error" role="alert">
 				<div ng-message-exp="['required', 'minlength', 'maxlength']">Пароль с ошибкой.</div>
 			</div>
