--- a/app/partial-profile.html
+++ b/app/partial-profile.html
@@ -1,101 +1,6 @@
-<section class="section profile" ng-controller="ProfileForm as profile">
+<section class="section profile">
 	<div class="wr">
-		<md-content layout-padding>
-			<h1 class="title">Пользователь {{user.name}}</h1>
-			<form name="projectForm" ng-submit="profile.submit()">
-
-				<md-input-container>
-					<label>Имя</label>
-					<input
-						required
-						name="name"
-						ng-model="profile.user.name"
-						ng-disabled="profile.isDisabled">
-					<div ng-messages="projectForm.clientName.$error">
-						<div ng-message="required">Бедненький, как же ты без имени то!? :О</div>
-					</div>
-				</md-input-container>
-
-				<div layout="row">
-
-					<md-input-container flex="50" class="md-block">
-						<label>E-mail</label>
-						<input
-							required
-							type="email"
-							name="email"
-							ng-model="profile.user.email"
-							minlength="10"
-							maxlength="100"
-							ng-pattern="/^.+@.+\..+$/"
-							ng-disabled="profile.isDisabled" />
-						<div ng-messages="projectForm.clientEmail.$error" role="alert">
-							<div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
-								Email ошибочка.
-							</div>
-						</div>
-					</md-input-container>
-
-					<md-input-container flex="50" class="md-block">
-						<label>Пароль</label>
-						<input
-							required
-							type="password"
-							name="pass"
-							ng-model="profile.user.pass"
-							minlength="6"
-							ng-disabled="profile.isDisabled" />
-						<div ng-messages="projectForm.clientEmail.$error" role="alert">
-							<div ng-message-exp="['required', 'minlength']">
-								Минимальный размер 6 символов
-							</div>
-						</div>
-					</md-input-container>
-
-				</div>
-				<div layout="row">
-					<md-autocomplete flex="50" class="md-block"
-						md-selected-item="profile.selectedItemCountry"
-						md-search-text-change="profile.searchTextChange(profile.user.country)"
-						md-search-text="profile.user.country"
-						md-selected-item-change="profile.selectedItemChange(item)"
-						md-items="item in profile.querySearch(profile.user.country,true)"
-						md-item-text="item.name"
-						md-min-length="0"
-						md-input-name="country"
-						md-floating-label="Страна"
-						md-menu-class="autocomplete-custom-template"
-						ng-disabled="profile.isDisabled" >
-						<md-item-template>
-							<span class="item-title">
-								<span> {{item.name}} </span>
-							</span>
-						</md-item-template>
-					</md-autocomplete>
-					<md-autocomplete flex="50" class="md-block"
-						md-selected-item="profile.selectedItemCity"
-						md-search-text-change="profile.searchTextChange(profile.user.city)"
-						md-search-text="profile.user.city"
-						md-selected-item-change="profile.selectedItemChange(item)"
-						md-items="item in profile.querySearch(profile.user.city,false)"
-						md-item-text="item.capital"
-						md-min-length="0"
-						md-input-name="city"
-						md-floating-label="Город"
-						md-menu-class="autocomplete-custom-template"
-						ng-disabled="profile.isDisabled" >
-						<md-item-template>
-							<span class="item-title">
-								<span> {{item.capital}} </span>
-							</span>
-						</md-item-template>
-					</md-autocomplete>
-				</div>
-
-				<div layout="row">
-					<md-button type="submit" ng-click="profile.edit()">{{ profile.isDisabled?profile.btn[0]:profile.btn[1] }}</md-button>
-				</div>
-			</form>
-		</md-content>
+		<h1 class="title">Пользователь</h1>
+		<profile-form />
 	</div>
 </section>
