--- a/app/partial-registration.html
+++ b/app/partial-registration.html
@@ -1,81 +1,6 @@
-<section class="section registration" ng-controller="RegistrationForm as forms">
+<section class="section registration">
 	<div class="wr">
-		<md-content layout-padding>
-			<h1 class="title">Регистрация</h1>
-			<form name="projectForm" ng-submit="forms.submit()">
-
-				<md-input-container>
-					<label>Имя</label>
-					<input required name="clientName" ng-model="user.name">
-					<div ng-messages="projectForm.clientName.$error">
-						<div ng-message="required">Бедненький, как же ты без имени то!? :О</div>
-					</div>
-				</md-input-container>
-
-				<div layout="row">
-
-					<md-input-container flex="50" class="md-block">
-						<label>E-mail</label>
-						<input required type="email" name="clientEmail" ng-model="forms.user.email" minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/" />
-						<div ng-messages="projectForm.clientEmail.$error" role="alert">
-							<div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
-								Email ошибочка.
-							</div>
-						</div>
-					</md-input-container>
-
-					<md-input-container flex="50" class="md-block">
-						<label>Пароль</label>
-						<input required type="password" name="clientPass" ng-model="forms.user.pass" minlength="6" />
-						<div ng-messages="projectForm.clientEmail.$error" role="alert">
-							<div ng-message-exp="['required', 'minlength']">
-								Минимальный размер 6 символов
-							</div>
-						</div>
-					</md-input-container>
-
-				</div>
-				<div layout="row">
-					<md-autocomplete flex="50" class="md-block"
-						md-selected-item="forms.selectedItemCountry"
-						md-search-text-change="forms.searchTextChange(forms.user.country)"
-						md-search-text="forms.user.country"
-						md-selected-item-change="forms.selectedItemChange(item)"
-						md-items="item in forms.querySearch(forms.user.country,true)"
-						md-item-text="item.name"
-						md-min-length="0"
-						md-input-name="country"
-						md-floating-label="Страна"
-						md-menu-class="autocomplete-custom-template">
-						<md-item-template>
-							<span class="item-title">
-								<span> {{item.name}} </span>
-							</span>
-						</md-item-template>
-					</md-autocomplete>
-					<md-autocomplete flex="50" class="md-block"
-						md-selected-item="forms.selectedItemCity"
-						md-search-text-change="forms.searchTextChange(forms.user.city)"
-						md-search-text="forms.user.city"
-						md-selected-item-change="forms.selectedItemChange(item)"
-						md-items="item in forms.querySearch(forms.user.city,false)"
-						md-item-text="item.capital"
-						md-min-length="0"
-						md-input-name="city"
-						md-floating-label="Город"
-						md-menu-class="autocomplete-custom-template">
-						<md-item-template>
-							<span class="item-title">
-								<span> {{item.capital}} </span>
-							</span>
-						</md-item-template>
-					</md-autocomplete>
-				</div>
-
-				<div layout="row">
-					<md-button type="submit" class="btn">Зарегистрироваться</md-button>
-				</div>
-			</form>
-		</md-content>
+		<h1 class="title">Регистрация</h1>
+		<registration-form />
 	</div>
 </section>
