--- a/app/partial-profile.html
+++ b/app/partial-profile.html
@@ -1,6 +1,6 @@
 <section class="section profile">
 	<div class="wr">
 		<h1 class="title">Пользователь</h1>
-		<profile-form />
+		<profile-form></profile-form>
 	</div>
 </section>
