--- a/app/tmpl/userInfoForm.html
+++ b/app/tmpl/userInfoForm.html
@@ -7,6 +7,7 @@
 				name="name"
 				ng-model="$ctrl.user.name"
 				ng-readonly="$ctrl.isReadonly"
+				ng-disabled="$ctrl.isDisabled"
 			/>
 			<div ng-messages="$ctrl.Name.$error">
 				<div ng-message="required">Бедненький, как же ты без имени то!? :О</div>
@@ -26,6 +27,7 @@
 					ng-pattern="/^.+@.+\..+$/"
 					ng-model="$ctrl.user.email"
 					ng-readonly="$ctrl.isReadonly"
+					ng-disabled="$ctrl.isDisabled"
 				/>
 				<div ng-messages="$ctrl.email.$error" role="alert">
 					<div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
@@ -43,6 +45,7 @@
 					minlength="6"
 					ng-model="$ctrl.user.pass"
 					ng-readonly="$ctrl.isReadonly"
+					ng-disabled="$ctrl.isDisabled"
 				/>
 				<div ng-messages="$ctrl.pass.$error" role="alert">
 					<div ng-message-exp="['required', 'minlength']">
@@ -65,6 +68,7 @@
 				md-floating-label="Страна"
 				md-menu-class="autocomplete-custom-template"
 				ng-readonly="$ctrl.isReadonly"
+				ng-disabled="$ctrl.isDisabled"
 			>
 				<md-item-template>
 					<span class="item-title">
@@ -84,6 +88,7 @@
 				md-floating-label="Город"
 				md-menu-class="autocomplete-custom-template"
 				ng-readonly="$ctrl.isReadonly"
+				ng-disabled="$ctrl.isDisabled"
 			>
 				<md-item-template>
 					<span class="item-title">
