Fixed submit for progile

--- a/app/tmpl/userInfoForm.html
+++ b/app/tmpl/userInfoForm.html
@@ -99,7 +99,7 @@
 		</div>
 
 		<div layout="row">
-			<md-button type="submit" class="btn" ng-click="$ctrl.btnClick()">{{$ctrl.btn}}</md-button>
+			<md-button type="submit" class="btn">{{$ctrl.btn}}</md-button>
 		</div>
 	</form>
 </md-content>
